# project6

./: README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
regression/: __init__.py  logreg.py  utils.py
test/: test_logreg.py
