[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "regression"
authors = [{name = "Jacqueline Williams", email = "jacqueline.williams@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["matplotlib==3.3.2", "numpy==1.19.2", "pandas==1.1.3", "scikit_learn==1.0.2", "pytest"]

[project.urls]
Home = "https://github.com/williams-jacquelinec/project6"
