[build-system]
requires = ["flit_core >=3.2,<4", "python >=3.6"]
build-backend = "flit_core.buildapi"

[project]
name = "regression"
authors = [{name = "Jacqueline Williams", email = "jacqueline.williams@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["matplotlib", "numpy", "pandas", "scikit_learn", "pytest"]

[project.urls]
Home = "https://github.com/williams-jacquelinec/project6"
